changed background color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     transition: .2s;
-    background: #dadada;
+    background: #f3f3f3;
     
 }
 
