--- a/style.css
+++ b/style.css
@@ -4,7 +4,20 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     transition: .2s;
-    background: #f3f3f3;
+    
+}
+
+#canvas1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    /* background: linear-gradient(217deg, rgb(255, 255, 255), rgba(255, 0, 0, 0) 70.71%),
+    linear-gradient(127deg, rgb(255, 255, 255), rgba(0, 255, 0, 0) 70.71%),
+    linear-gradient(336deg, rgba(0, 0, 0, 0.847), rgba(0, 0, 255, 0) 70.71%); */
+    background: linear-gradient(white,white, gray);
     
 }
 
@@ -12,11 +25,11 @@ html,
 body {
     width: 100%;
     height: 100%;
-    
+
 }
 
 
-#loader{
+#loader {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -25,16 +38,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 99;
-    animation: anim2 1s cubic-bezier(0.19, 1, 0.22, 1) 4s   both;
+    z-index: 2;
+    animation: anim2 1s cubic-bezier(0.19, 1, 0.22, 1) 4s both;
+    background: linear-gradient(white,white, gray); 
 }
-#wrapperload{
+
+#wrapperload {
     width: 500px;
     height: 100px;
     overflow: hidden;
-
 }
-#wrapperload .elem{
+
+#wrapperload .elem {
     width: 100%;
     height: 100%;
     display: flex;
@@ -42,26 +57,32 @@ body {
     align-items: center;
 
 }
-#wrapperload .elem img{
+
+#wrapperload .elem img {
     width: 40%;
     background: none;
 }
-#wrapperload .elem:nth-child(1){
-    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 1s   both;
+
+#wrapperload .elem:nth-child(1) {
+    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 1s both;
 }
-#wrapperload .elem:nth-child(2){
-    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 2s   both;
+
+#wrapperload .elem:nth-child(2) {
+    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 2s both;
 }
-#wrapperload .elem:nth-child(3){
-    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 3s   both;
+
+#wrapperload .elem:nth-child(3) {
+    animation: anim 2s cubic-bezier(0.19, 1, 0.22, 1) 3s both;
 }
+
 @keyframes anim {
-    to{
+    to {
         margin-top: -100px;
     }
 }
+
 @keyframes anim2 {
-    to{
+    to {
         transform: translateY(-100%);
     }
 }
@@ -89,14 +110,14 @@ nav .logo-side {
     padding-left: 30px;
 }
 
-nav a img{
+nav a img {
     width: 50px;
     cursor: pointer;
-    opacity: .9 ;
     transition: .2s;
     border-radius: 100%;
 }
-nav img:hover{
+
+nav img:hover {
     transform: scale(1.1);
     border: 1px solid black;
 }
@@ -119,7 +140,8 @@ nav .links-side a {
 
 
 }
-nav .links-side a::after{
+
+nav .links-side a::after {
     content: "";
     height: 3px;
     width: 0%;
@@ -133,7 +155,8 @@ nav .links-side a::after{
     transition: .3s ease-in-out;
 
 }
-nav .links-side a:hover::after{
+
+nav .links-side a:hover::after {
     opacity: 100;
     width: 100%;
 }
@@ -142,7 +165,8 @@ nav .links-side a:hover::after{
 nav .links-side a:nth-child(2) {
     opacity: .6;
 }
-nav .links-side a:nth-child(2):hover{
+
+nav .links-side a:nth-child(2):hover {
     opacity: 1;
 
 }
@@ -150,17 +174,20 @@ nav .links-side a:nth-child(2):hover{
 nav .links-side i {
     margin-left: 50px;
     cursor: pointer;
-    
+
 }
-nav .links-side i:hover{
+
+nav .links-side i:hover {
     transform: scale(1.2);
 }
-.sections{
+
+.sections {
     width: 100%;
     height: calc(100% - 80px);
     display: flex;
 }
-.sections .left{
+
+.sections .left {
     width: 50%;
     height: 100%;
     padding: 100px;
@@ -168,29 +195,32 @@ nav .links-side i:hover{
 
 }
 
-.left h4{
+.left h4 {
     font-size: 35px;
     font-family: 'Segoe Script', sans-serif;
     /* opacity: .8; */
-    
+
 }
-.left>h5{
+
+.left>h5 {
     text-transform: uppercase;
     letter-spacing: 2.5px;
     word-spacing: 5px;
     margin-top: 20px;
-    
+
 }
 
-.left h4 img{
+.left h4 img {
     display: inline-block;
     width: 250px;
-    position: relative;;
+    position: relative;
+    ;
     top: 15px;
     opacity: 1;
-   
+
 }
-.btn{
+
+.btn {
     display: flex;
     align-items: center;
     margin-top: 30px;
@@ -198,30 +228,37 @@ nav .links-side i:hover{
     position: relative;
     left: -5px;
 }
-.btn img{
+
+.btn img {
     width: 60px;
     cursor: pointer;
     border-radius: 100%;
-    /* opacity: .8; */
+    transition: .3s;
+    transform: scale(.9);
 }
-.btn img:hover{
-    opacity: 1;
+
+.btn img:hover {
+    transform: scale(1);
 }
-.btn img:active{
+
+.btn img:active {
     transform: scale(1.1);
 
 }
-.btn>h5{
+
+.btn>h5 {
     font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 3px;
     /* opacity: .8; */
 }
-.contact{
+
+.contact {
     margin-top: 140px;
 
 }
-.contact h3{
+
+.contact h3 {
     text-transform: uppercase;
     letter-spacing: 6px;
     word-spacing: 5px;
@@ -229,36 +266,53 @@ nav .links-side i:hover{
     margin-bottom: 25px;
 
 }
-.contact h6{
+
+.contact h6 {
     color: black;
     letter-spacing: 4px;
     font-size: 9px;
-    
+
 }
-.contact span{
+
+.contact span {
     margin-left: 5px;
     cursor: pointer;
     letter-spacing: .5px;
 }
-.contact>h6{
+
+.contact>h6 {
     margin-bottom: 5px;
 }
-.right{
+
+.right {
     width: 50%;
     height: 100%;
 }
-.right img{
+
+.right img {
     width: 535px;
     margin-left: 70px;
+    -webkit-filter: drop-shadow(-3px 20px 10px #313131);
+    filter: drop-shadow(-3px 20px 10px #313131);
+    transform: scale(.95);
     transition: .5s;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
 }
-.right img:hover{
-    transform: scale(1.01);
+
+.right img:hover {
+    -webkit-filter: drop-shadow(-3px 40px 10px #313131);
+    filter: drop-shadow(-3px 40px 10px #313131);
+    transform: scale(1);
 }
-.right img:active{
+
+.right img:active {
     transform: scale(1.1);
 
 }
-.sections>img{
+
+.sections>img {
     position: absolute;
 }
