--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     transition: .2s;
-    
+    -webkit-tap-highlight-color: transparent;
 }
 
 #canvas1 {
@@ -14,9 +14,6 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    /* background: linear-gradient(217deg, rgb(255, 255, 255), rgba(255, 0, 0, 0) 70.71%),
-    linear-gradient(127deg, rgb(255, 255, 255), rgba(0, 255, 0, 0) 70.71%),
-    linear-gradient(336deg, rgba(0, 0, 0, 0.847), rgba(0, 0, 255, 0) 70.71%); */
     background: linear-gradient(white,white, gray);
     
 }
