--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 3;
     animation: anim2 1s cubic-bezier(0.19, 1, 0.22, 1) 4s both;
     background: white;
 }
@@ -81,11 +81,17 @@ body {
 
 nav {
     width: 100%;
-    height: 80px;
+    height: 70px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 2;
+    overflow: hidden;
+    position: fixed;
+    background-color: white;
+    box-shadow: 0px -8px 20px 6px black;
+
 
 }
 
@@ -181,6 +187,7 @@ nav .links-side a:nth-child(4):hover {
     width: 100%;
     height: calc(100% - 80px);
     display: flex;
+    padding-top: 80px;
 }
 
 .sections .left {
@@ -264,6 +271,9 @@ nav .links-side a:nth-child(4):hover {
     background: #212121;
     color: white;
 }
+.btn .servicesBtn button:hover{
+    transform: translateY(-2px)
+}
 
 
 
@@ -276,7 +286,9 @@ nav .links-side a:nth-child(4):hover {
     background-color: #212121;
     color: white;
 }
-
+.btn .contactBtn button:hover{
+    transform: translateY(-2px)
+}
 
 .scrollText {
     margin-top: 120px;
@@ -324,7 +336,7 @@ nav .links-side a:nth-child(4):hover {
 }
 
 .right img {
-    width: 535px;
+    width: 600px;
     margin-left: 70px;
     -webkit-filter: drop-shadow(-3px 20px 10px #313131);
     filter: drop-shadow(-3px 20px 10px #313131);
