--- a/style.css
+++ b/style.css
@@ -621,7 +621,7 @@ h2 {
 
 .page3 {
     width: 100%;
-    height: 300vh;
+    height: 100vh;
     background-color: #181614;
     display: flex;
     align-items: center;
@@ -678,11 +678,42 @@ h2 {
 
 .page3 .serviceSection{
     display: flex;
-    gap: 250px;
+    gap: 200px;
     flex-direction: row;
     position: relative;
     bottom: 660px;
+    flex-direction: row;
 
 }
-.page3 .serviceSection .service{
+.page3 .serviceTexts{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    position: relative;
+    bottom: 950px;
+    width: 50px;
+    justify-content: center;
+    align-items: center;
+}
+.serviceTexts .text1,.text2,.text3{
+    font-size: 10px;
+    /* width: 150px; */
+    text-align: center;
+    position: relative;
+
+}
+.text1{
+    top: -45px;
+    right: 338px;
+    width: 178px;
+}
+.text2{
+    top: -109px;
+    right: -4px;
+    width: 151px;
+}
+.text3{
+    top: -162px;
+    right: -346px;
+    width: 141px;
 }
