--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #181614;
+    scroll-behavior: smooth;
 
 }
 
@@ -80,7 +81,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #181614;
-
+    
 }
 
 
