--- a/mobile.css
+++ b/mobile.css
@@ -19,6 +19,7 @@
         position: fixed;
         background-color: #181614;
         /* background: gray; */
+        
 
 
     }
@@ -28,7 +29,7 @@
         display: flex;
         align-items: center;
         padding-left: 30px;
-        padding-top: 30px;
+        padding-top: 0px;
         position: absolute;
         left: 0;
         margin-top: 0px;
@@ -40,7 +41,7 @@
     nav .menubtn {
         position: relative;
         left: 40%;
-        padding-top: 30px;
+        padding-top: 0px;
         display:unset;
     }
 
@@ -49,7 +50,7 @@
     }
 
     nav a img {
-        width: 70px;
+        width: 60px;
         cursor: pointer;
         transition: .3s ease-in-out;
         border-radius: 100%;
@@ -70,13 +71,14 @@
         display: flex;
         padding-top: 120px;
         flex-direction: column;
+        padding-top: 90px;
     }
 
     .sections .left {
         width: 50%;
         height: 100%;
         padding-top: 80px;
-        padding-left: 20px;
+        padding-left: 5px;
         margin-top: -30px;
 
     }
@@ -102,7 +104,7 @@
 
     .left>h5 {
         text-transform: uppercase;
-        padding-left: 30px;
+        padding-left: 33px;
         font-size: 10px;
         letter-spacing: 1.5px;
         word-spacing: 4px;
@@ -131,8 +133,11 @@
 
     .socialIcons {
         display: flex;
-        gap: 20px;
-        margin-top: 20px;
+        gap: 45px;
+        margin-top: 0px;
+        position: absolute;
+        top: 80vh;
+        left: 16vw;
 
     }
 
@@ -141,7 +146,7 @@
     }
 
     .socialIcons a i {
-        font-size: 40px;
+        font-size: 15vw;
         color: white;
         transform: scale(.8);
     }
@@ -156,6 +161,9 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        position: absolute;
+        top: 88vh;
+        left: 20vw;
 
 
     }
@@ -189,6 +197,9 @@
         display: flex;
         gap: 10px;
         align-items: center;
+        /* position: absolute; */
+        display: none;
+        
     }
 
     .scrollText h3 {
@@ -231,19 +242,29 @@
     }
 
     .right>img {
-        width: 450px;
-        margin-left: 40px;
-        margin-top: 25px;
+        width: 250px;
+        margin-left: 0px;
+        margin-top: -30px;
         transition: .5s;
         -webkit-transition: all 0.5s ease-in-out;
         -moz-transition: all 0.5s ease-in-out;
         -ms-transition: all 0.5s ease-in-out;
         -o-transition: all 0.5s ease-in-out;
         animation: rightImgAnim 2.5s infinite ease-in-out;
+        position: absolute;
+        top: 45%;
+        left: 18%;
     }
 
     .shadow {
         animation: shadowanim 2.5s infinite ease-in-out;
+
+    }
+    .shadow img{
+        width: 350px;
+        position: absolute;
+        left: 5%;
+        top: 72vh;
 
     }
 
