--- a/mobile.css
+++ b/mobile.css
@@ -69,15 +69,14 @@
         width: 100%;
         height: calc(100% - 80px);
         display: flex;
-        padding-top: 120px;
+        padding-top: 10vh;
         flex-direction: column;
-        padding-top: 90px;
     }
 
     .sections .left {
         width: 50%;
         height: 100%;
-        padding-top: 80px;
+        padding-top: 9vh;
         padding-left: 5px;
         margin-top: -30px;
 
@@ -238,13 +237,13 @@
 
     .right {
         width: 50%;
-        height: 100%;
+        height: 100vh;
     }
 
     .right>img {
         width: 250px;
         margin-left: 0px;
-        margin-top: -30px;
+        margin-top: 0px;
         transition: .5s;
         -webkit-transition: all 0.5s ease-in-out;
         -moz-transition: all 0.5s ease-in-out;
@@ -252,8 +251,8 @@
         -o-transition: all 0.5s ease-in-out;
         animation: rightImgAnim 2.5s infinite ease-in-out;
         position: absolute;
-        top: 45%;
-        left: 18%;
+        top: 35vh;
+        left: 19vw;
     }
 
     .shadow {
@@ -263,7 +262,7 @@
     .shadow img{
         width: 350px;
         position: absolute;
-        left: 5%;
+        left: 6vw;
         top: 72vh;
 
     }
